fix: update canonical link to include trailing slash

--- a/Products/index.html
+++ b/Products/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products">
+    <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products/">
     <link rel="stylesheet", href="style.css">
     <title>Products</title>
 </head>
