--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
         <div id="div_buttons">
             <div class="link_button_large div_center", id="button_download">
-                <a href="./Products/index.html">Products</a>
+                <a href="./Products/">Products</a>
             </div>
         </div>
     </div>
