add: include Open Graph meta tags for Products and main page

--- a/Products/index.html
+++ b/Products/index.html
@@ -6,12 +6,17 @@
     <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products/">
     <link rel="stylesheet", href="style.css">
     <title>Products</title>
+
+    <meta property="og:title" content="nimaの保管庫 - Products">
+    <meta property="og:description" content="各プログラムの概要リンク">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://souto-naitou.github.io/StoreHouse/Products/">
 </head>
 <body>
     <h1>Products</h1>
     <hr />
     <div id="containers">
-        <a class="content_container", href="Binary-Viewer/index.html">
+        <a class="content_container", href="Binary-Viewer/">
             <img src="img/default.png">
             <div>
                 <h3>バイナリ ビューワー</h3>
@@ -20,7 +25,7 @@
             </div>
         </a>
     
-        <a class="content_container", href="DotVS-Deleter/index.html">
+        <a class="content_container", href="DotVS-Deleter/">
             <img src="img/default.png">
             <div>
                 <h3>.vs デリーター</h3>
@@ -29,7 +34,7 @@
             </div>
         </a>
 
-        <a class="content_container", href="Variable-Replacer/index.html">
+        <a class="content_container", href="Variable-Replacer/">
             <img src="img/default.png">
             <div>
                 <h3>バリアブル リプレーサー</h3>
