--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/">
     <title>nimaの保管庫</title>
     <link rel="stylesheet" href="style.css">
+
+    <meta property="og:title" content="nimaの保管庫">
+    <meta property="og:description" content="つくったプログラム頒布するお">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://souto-naitou.github.io/StoreHouse/">
 </head>
 <body>
     <div id="main">
