fix: update language attribute to Japanese and improve layout for Products page

--- a/Products/index.html
+++ b/Products/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products/">
     <link rel="stylesheet", href="style.css">
+    <link rel="stylesheet", href="../style.css">
     <title>Products</title>
 
     <meta property="og:title" content="nimaの保管庫 - Products">
@@ -13,8 +14,17 @@
     <meta property="og:url" content="https://souto-naitou.github.io/StoreHouse/Products/">
 </head>
 <body>
-    <h1>Products</h1>
-    <hr />
+    <div class="div_center", id="top_content">
+        <h1>Products</h1>
+        <p style="font-weight: bold;">各プログラムの概要</p>
+    </div>
+
+    <div id="div_buttons">
+        <div class="link_button_large div_center", id="button_download">
+            <a href="../">Home</a>
+        </div>
+    </div>
+
     <div id="containers">
         <a class="content_container", href="Binary-Viewer/">
             <img src="img/default.png">
