add: implement animation styles and link button design for improved UI

--- a/Products/.template/template.html
+++ b/Products/.template/template.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products/Binary-Viewer/">
+    <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/Products/$$DirectoryName$$/">
     <link rel="stylesheet", href="../style_products.css">
     <link rel="stylesheet", href="../../animation.css">
     <link rel="stylesheet", href="../../link_button_large.css">
-    <title>バイナリ ビューワー</title>
+    <title>$$TITLE_NAME$$</title>
 </head>
 <body>
     <div class="div_center", id="top_content">
-        <h1>バイナリ ビューワー</h1>
-        <p style="font-weight: bold;">バイナリファイルなどを16進数で表示します</p>
-        <p style="font-weight: bold;">より低レベルでファイルを見ることができます</p>
+        <h1>$$TITLE_NAME$$</h1>
+        <p style="font-weight: bold;">$$DESCRIPTION_01$$</p>
+        <p style="font-weight: bold;">$$DESCRIPTION_02$$</p>
     </div>
 
     <div class="div_center", id="div_buttons">
@@ -25,12 +25,12 @@
         </div>
     </div>
 
-    <img src="img/screenshot_0.png" class="screenshot"/>
+    <img src="$$THUMBNAIL_PATH$$" class="screenshot"/>
 
     <div class="div_center", id="div_download">
         <h2>ダウンロード</h2>
         <div class="link_button_large">
-            <a href="../../downloads/exe/binvw.exe", download>Download</a>
+            <a href="../../downloads/exe/$$EXE_NAME$$", download>Download</a>
         </div>
     </div>
 
