--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="canonical", href="https://souto-naitou.github.io/StoreHouse/">
     <title>nimaの保管庫</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="animation.css">
+    <link rel="stylesheet" href="link_button_large.css">
 
     <meta property="og:title" content="nimaの保管庫">
     <meta property="og:description" content="つくったプログラム頒布するお">
@@ -20,7 +22,7 @@
         </div>
     
         <div id="div_buttons">
-            <div class="link_button_large div_center", id="button_download">
+            <div class="link_button_large div_center">
                 <a href="./Products/">Products</a>
             </div>
         </div>
