fix: update image paths for Binary Viewer and other products to use thumbnails

--- a/Products/index.html
+++ b/Products/index.html
@@ -29,7 +29,7 @@
 
     <div class="delayed_fadeIn", id="containers">
         <a class="content_container", href="Binary-Viewer/">
-            <img src="img/default.png">
+            <img src="Binary-Viewer/img/thumbnail.png">
             <div>
                 <h3>バイナリ ビューワー</h3>
                 <p>バイナリファイルなどを16進数で表示します</p>
@@ -38,7 +38,7 @@
         </a>
     
         <a class="content_container", href="DotVS-Deleter/">
-            <img src="img/default.png">
+            <img src="DotVS-Deleter/img/thumbnail.png">
             <div>
                 <h3>.vs デリーター</h3>
                 <p>指定されたパスを再帰的に.vsフォルダーを検索・消去します</p>
@@ -47,7 +47,7 @@
         </a>
 
         <a class="content_container", href="Variable-Replacer/">
-            <img src="img/default.png">
+            <img src="Variable-Replacer/img/thumbnail.png">
             <div>
                 <h3>バリアブル リプレーサー</h3>
                 <p>"$$"で囲まれた部分に任意の文字列を代入し</p>
