--- a/Products/Binary-Viewer/index.html
+++ b/Products/Binary-Viewer/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <img src="img/screenshot_0.png" class="screenshot"/>
+    <img src="img/thumbnail.png" class="screenshot"/>
 
     <div class="div_center", id="div_download">
         <h2>ダウンロード</h2>
