fix: simplify button structure in product templates for cleaner HTML

--- a/Products/DotVS-Deleter/index.html
+++ b/Products/DotVS-Deleter/index.html
@@ -29,9 +29,7 @@
 
     <div class="div_center", id="div_download">
         <h2>ダウンロード</h2>
-        <div class="link_button_large">
-            <a href="../../downloads/exe/vsdel.exe", download>Download</a>
-        </div>
+        <a class="link_button_large", href="../../downloads/exe/vsdel.exe", download>Download</a>
     </div>
 
     <div id="spacing_header"></div>
