--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
         </div>
     
         <div id="div_buttons">
-            <div class="link_button_large div_center">
-                <a href="./Products/">Products</a>
-            </div>
+            <a class="link_button_large div_center", href="./Products/">Products</a>
         </div>
     </div>
 </body>
