--- a/Products/Binary-Viewer/index.html
+++ b/Products/Binary-Viewer/index.html
@@ -17,21 +17,15 @@
     </div>
 
     <div class="div_center", id="div_buttons">
-        <div class="link_button_large">
-            <a href="../../">Home</a>
-        </div>
-        <div class="link_button_large">
-            <a href="../">Products</a>
-        </div>
+        <a class="link_button_large", href="../../">Home</a>
+        <a class="link_button_large", href="../">Products</a>
     </div>
 
     <img src="img/thumbnail.png" class="screenshot"/>
 
     <div class="div_center", id="div_download">
         <h2>ダウンロード</h2>
-        <div class="link_button_large">
-            <a href="../../downloads/exe/binvw.exe", download>Download</a>
-        </div>
+        <div class="link_button_large", href="../../downloads/exe/binvw.exe", download>Download</a>
     </div>
 
     <div id="spacing_header"></div>
