--- a/Products/index.html
+++ b/Products/index.html
@@ -22,9 +22,7 @@
     </div>
 
     <div id="div_buttons">
-        <div class="link_button_large div_center">
-            <a href="../">Home</a>
-        </div>
+        <a class="link_button_large div_center", href="../">Home</a>
     </div>
 
     <div class="delayed_fadeIn", id="containers">
