fix: correct button structure in Binary Viewer and DotVS-Deleter for improved accessibility

--- a/Products/Binary-Viewer/index.html
+++ b/Products/Binary-Viewer/index.html
@@ -25,7 +25,7 @@
 
     <div class="div_center", id="div_download">
         <h2>ダウンロード</h2>
-        <div class="link_button_large", href="../../downloads/exe/binvw.exe", download>Download</a>
+        <a class="link_button_large", href="../../downloads/exe/binvw.exe", download>Download</a>
     </div>
 
     <div id="spacing_header"></div>
