--- a/Products/DotVS-Deleter/index.html
+++ b/Products/DotVS-Deleter/index.html
@@ -17,12 +17,8 @@
     </div>
 
     <div class="div_center", id="div_buttons">
-        <div class="link_button_large">
-            <a href="../../">Home</a>
-        </div>
-        <div class="link_button_large">
-            <a href="../">Products</a>
-        </div>
+        <a class="link_button_large", href="../../">Home</a>
+        <a class="link_button_large", href="../">Products</a>
     </div>
 
     <img src="img/thumbnail.png" class="screenshot"/>
